# framework.appfw.capability-manager

./: CMakeLists.txt  capability-manager.manifest  capability-manager.pc.in
include/: capability_manager.h
packaging/: capability-manager.spec
src/: capability_manager.c  capability_manager_defs.h  capability_manager_util.c  capability_manager_util.h  capability_manager_xml.c  capability_manager_xml.h
